WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207269
REGRESSION: ASSERTION FAILED: resetResult == 0 on regression tests in ITP code, resetting SQLite statement
https://bugs.webkit.org/show_bug.cgi?id=207269
Summary
REGRESSION: ASSERTION FAILED: resetResult == 0 on regression tests in ITP cod...
Jason Lawrence
Reported
2020-02-05 08:27:12 PST
http/tests/websocket/tests/hybi/workers/close.html Description: This test is flaky crashing on Mac debug wk2 and once on Catalina gpuprocess Debug. History:
https://results.webkit.org/?limit=50000&suite=layout-tests&test=http%2Ftests%2Fwebsocket%2Ftests%2Fhybi%2Fserver-close.html&style=debug&platform=mac
Crash log:
https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r254447%20(6866)/http/tests/websocket/tests/hybi/server-close-crash-log.txt
Attachments
Crash log
(71.15 KB, text/rtf)
2020-02-05 08:28 PST
,
Jason Lawrence
no flags
Details
Update Test Expectations
(1.46 KB, patch)
2020-02-05 08:33 PST
,
Jason Lawrence
no flags
Details
Formatted Diff
Diff
Update Test Expectations
(1.51 KB, patch)
2020-02-05 12:07 PST
,
Jason Lawrence
no flags
Details
Formatted Diff
Diff
Patch
(2.23 KB, patch)
2020-02-07 14:32 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jason Lawrence
Comment 1
2020-02-05 08:28:28 PST
Created
attachment 389808
[details]
Crash log
Radar WebKit Bug Importer
Comment 2
2020-02-05 08:28:54 PST
<
rdar://problem/59188891
>
Jason Lawrence
Comment 3
2020-02-05 08:33:05 PST
Created
attachment 389811
[details]
Update Test Expectations
Jason Lawrence
Comment 4
2020-02-05 08:48:00 PST
Possible regression at
r254421
.
Truitt Savell
Comment 5
2020-02-05 08:49:12 PST
Comment on
attachment 389811
[details]
Update Test Expectations Clearing flags on attachment: 389811 Committed
r255816
: <
https://trac.webkit.org/changeset/255816
>
Truitt Savell
Comment 6
2020-02-05 12:05:49 PST
To confirm, this bug is tracking the crashes for http/tests/websocket/tests/hybi/server-close.html
Jason Lawrence
Comment 7
2020-02-05 12:07:39 PST
Created
attachment 389841
[details]
Update Test Expectations
Truitt Savell
Comment 8
2020-02-05 12:08:16 PST
Comment on
attachment 389841
[details]
Update Test Expectations Clearing flags on attachment: 389841 Committed
r255843
: <
https://trac.webkit.org/changeset/255843
>
Alexey Proskuryakov
Comment 9
2020-02-05 23:01:56 PST
We should track all such crashes here. It seems very unlikely that this specific test is to blame. Thread 13 Crashed:: Dispatch queue: WebResourceLoadStatisticsStore Process Data Queue 0 com.apple.JavaScriptCore 0x000000012a3a8b00 WTFCrash + 16 (Assertions.cpp:305) 1 com.apple.WebKit 0x00000001091d017b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebKit 0x00000001097b94c8 WebKit::resetStatement(WebCore::SQLiteStatement&) + 104 (ResourceLoadStatisticsDatabaseStore.cpp:326) 3 com.apple.WebKit 0x00000001097be503 WebKit::ResourceLoadStatisticsDatabaseStore::getNumberOfPrevalentResources() const + 131 (ResourceLoadStatisticsDatabaseStore.cpp:957) 4 com.apple.WebKit 0x00000001097bec60 WebKit::ResourceLoadStatisticsDatabaseStore::calculateTelemetryData(WebKit::PrevalentResourceDatabaseTelemetry&) const + 32 (ResourceLoadStatisticsDatabaseStore.cpp:1092) 5 com.apple.WebKit 0x00000001097bf8b3 WebKit::ResourceLoadStatisticsDatabaseStore::calculateAndSubmitTelemetry() const + 163 (ResourceLoadStatisticsDatabaseStore.cpp:1118) 6 com.apple.WebKit 0x00000001097e7de7 WebKit::ResourceLoadStatisticsDatabaseStore::ResourceLoadStatisticsDatabaseStore(WebKit::WebResourceLoadStatisticsStore&, WTF::WorkQueue&, WebKit::ShouldIncludeLocalhost, WTF::String const&, PAL::SessionID)::$_11::operator()() const + 55 (ResourceLoadStatisticsDatabaseStore.cpp:307) 7 com.apple.WebKit 0x00000001097e7cc9 WTF::Detail::CallableWrapper<WebKit::ResourceLoadStatisticsDatabaseStore::ResourceLoadStatisticsDatabaseStore(WebKit::WebResourceLoadStatisticsStore&, WTF::WorkQueue&, WebKit::ShouldIncludeLocalhost, WTF::String const&, PAL::SessionID)::$_11, void>::call() + 25 (Function.h:52)
Kate Cheney
Comment 10
2020-02-07 14:32:14 PST
Created
attachment 390124
[details]
Patch
Kate Cheney
Comment 11
2020-02-07 14:34:05 PST
This will still crash. But this adds more specific logging to know what error occurred, and doesn't try to reset the statement, which would cause another error.
WebKit Commit Bot
Comment 12
2020-02-07 17:03:52 PST
Comment on
attachment 390124
[details]
Patch Clearing flags on attachment: 390124 Committed
r256085
: <
https://trac.webkit.org/changeset/256085
>
WebKit Commit Bot
Comment 13
2020-02-07 17:03:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug