REGRESSION: ASSERTION FAILED: resetResult == 0 on regression tests in ITP code, resetting SQLite statement https://bugs.webkit.org/show_bug.cgi?id=207269 <rdar://problem/59188891>

Reviewed by Brady Eidson.

Adds logging if ITP telemetry calculations fail to step and makes sure
not to reset the statement in this case as it will result in an error.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:


Canonical link: https://commits.webkit.org/220421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256085 268f45cc-cd09-0410-ab3c-d52691b4dbfc